--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+   "moduleResolution": "node",
+    "types": ["@types/react"],
+    "esModuleInterop": true,
+    "skipLibCheck": true
   }
 }
