--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/native-stack": "^7.3.9",
     "@react-navigation/stack": "^7.1.1",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.7.9",
     "expo": "~52.0.26",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
+    "mime": "^4.0.7",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.6",
@@ -29,7 +31,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13"
+    "react-native-web": "^0.19.13",
+    "expo-file-system": "~18.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
