--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,14 @@
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.7.9",
+    "cli": "^1.0.1",
     "expo": "~52.0.26",
+    "expo-auth-session": "~6.0.3",
+    "expo-file-system": "~18.0.12",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
     "mime": "^4.0.7",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
@@ -31,10 +35,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13",
-    "expo-file-system": "~18.0.12",
-    "expo-auth-session": "~6.0.3",
-    "expo-web-browser": "~14.0.2"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
