--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "expo-file-system": "~18.0.12",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "^14.0.2",
+    "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "expo-web-browser": "~14.0.2",
     "mime": "^4.0.7",
@@ -33,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.23.8",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
