--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "frontend",
+    "name": "PlanMyJourney",
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/imagenes/logo3.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "scheme": "frontend",
@@ -23,7 +23,7 @@
     "android": {
       "package": "com.viajes.app",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/imagenes/logo3.png",
         "backgroundColor": "#ffffff"
       },
       "config": {
@@ -39,6 +39,7 @@
       "eas": {
         "projectId": "10cd5b9a-db08-4540-bd10-dd5a4533c801"
       }
-    }
+    },
+    "owner": "francisco.torredemer"
   }
 }
